fixed padding on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -220,8 +220,8 @@ margin-top:5px;
     gap: 5px;
   }
   .card {
-    padding: 10px;
-    gap: 8px;
+    padding: 3px;
+    gap: 5px;
   }
   .card-header {
     gap: 8px;
